examples/html-to-string-macro/tests/ui/node_block_with_dot.rs
use html_to_string_macro::html;
fn main () {
    html! {
        <!DOCTYPE html>
            <html>
            {"block".}
            </html>
    };
}